log
Thu 25 Apr 2024 06:15:44 PM UTC: 
 tests:  0|6
total_score: 0/70
8b14c06
Thu 25 Apr 2024 06:19:21 PM UTC: 
 hashmap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:61:3: error: ‘map’ undeclared (first use in this function); did you mean ‘mapeo’?
   61 |   map->buckers = (Pair**) malloc(capacity*sizeof(Pair*));
      |   ^~~
      |   mapeo
hashmap.c:61:3: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:65:3: error: expected ‘(’ before ‘return’
   65 |   return NULL;
      |   ^~~~~~
      |   (
hashmap.c:66:1: error: control reaches end of non-void function [-Werror=return-type]
   66 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
16db653
Thu 25 Apr 2024 06:19:46 PM UTC: 
 hashmap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:61:3: error: ‘map’ undeclared (first use in this function); did you mean ‘mapeo’?
   61 |   map->buckers = (Pair**) malloc(capacity*sizeof(Pair*));
      |   ^~~
      |   mapeo
hashmap.c:61:3: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
bf263c1
Thu 25 Apr 2024 06:40:46 PM UTC: 
 hashmap.c | 11 ++++++-----
 1 file changed, 6 insertions(+), 5 deletions(-)
 tests:  0|6
total_score: 0/70
3d8d3b9
Thu 25 Apr 2024 07:13:45 PM UTC: 
 hashmap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
9f4f50d
Thu 25 Apr 2024 07:16:19 PM UTC: 
 hashmap.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:54:21: error: ‘Pair’ has no member named ‘next’
   54 |       while (current->next != NULL) {
      |                     ^~
hashmap.c:55:27: error: ‘Pair’ has no member named ‘next’
   55 |          current = current->next;
      |                           ^~
hashmap.c:57:12: error: ‘Pair’ has no member named ‘next’
   57 |     current->next = new_pair;
      |            ^~
Compilation failed
57c8e75
